<resources>
    <string name="app_name">Memory Game</string>
    <string name="size_3x4">3x4</string>
    <string name="size_5x2">5x2</string>
    <string name="size_4x4">4x4</string>
    <string name="size_4x5">4x5</string>
    <string name="instructions">flip over any two cards and see if they match.</string>
    <string name="victory_title">Congratulations</string>
    <string name="victory_return_to_lobby">Return to lobby</string>
    <string name="victory_msg">"You tried %1$d times, in %2$s</string>
</resources>
